[package]
name = "zuroxc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
colored = "2.1.0"
sha2 = "0.10.8"

[profile.release]
debug = 1
lto = "fat"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "symbol-mangling-version=v0"]
